--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="sports">sports</string>
+    <string name="general">general</string>
+    <string name="health">health</string>
+    <string name="bussines">bussines</string>
+    <string name="entertainment">entertainment</string>
+    <string name="science">science</string>
 </resources>
